# tidebreak

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/murk/: Cargo.toml
crates/murk/benches/: propagation_bench.rs
crates/murk/src/: field.rs  hash.rs  lib.rs  node.rs  octree.rs  propagation.rs  query.rs  stamp.rs  stats.rs  universe.rs
crates/tidebreak-core/: Cargo.toml
crates/tidebreak-core/src/: arena.rs  lib.rs  output.rs  plugin.rs  simulation.rs  world_view.rs
crates/tidebreak-core/src/entity/: components.rs  mod.rs
crates/tidebreak-core/src/plugins/: mod.rs  movement.rs  projectile.rs  sensor.rs  weapon.rs
crates/tidebreak-core/src/resolver/: combat.rs  event.rs  mod.rs  physics.rs
crates/tidebreak-core/src/tests/: determinism.rs  helpers.rs  integration.rs  mod.rs
crates/tidebreak-py/: Cargo.toml  pyproject.toml
crates/tidebreak-py/examples/: train_heat_seeker.py  train_heat_seeker_viz.py
crates/tidebreak-py/python/tidebreak/: __init__.py
crates/tidebreak-py/python/tidebreak/envs/: __init__.py  combat_env.py  murk_env.py  wrappers.py
crates/tidebreak-py/src/: lib.rs
crates/tidebreak-py/tests/: bench_boundary.py  test_determinism.py  test_field_enum.py  test_gymnasium.py  test_observations.py  test_propagation.py  test_training_smoke.py
docs/: README.md
docs/decisions/: README.md  adr-0001-entity-plugin-resolver-architecture.md  adr-0002-discrete-depth-layers.md  adr-0003-determinism-strategy.md  adr-0004-combat-arena-isolation.md  adr-0005-time-model-tick-hierarchy.md  adr-0006-rust-core-python-bindings.md  adr-0007-entity-storage-strategy.md
docs/design/: README.md  architecture.md  combat-arena.md  damage-and-boarding.md  economy.md  entity-framework.md  factions.md  governance.md  layers-and-terrain.md  missions.md  people.md  sandbox-design.md  sensors-and-fog.md  strategic-system-interactions.md  system-interactions.md  weather.md
docs/development/: setup.md
docs/plans/: 2026-01-29-murk-python-bindings.md  2026-01-30-entity-plugin-resolver-implementation.md  2026-01-30-field-propagation-design.md
docs/requirements/: README.md  combat.md  cross-cutting.md  drl.md  entity-framework.md  layers.md  people.md  sensors.md  ships.md  world.md
docs/research/: README.md  murk-design.md
docs/technical/: README.md  architecture.md  contracts.md
docs/vision/: README.md  glossary.md  pillars.md  pitch.md
src/tidebreak/: __init__.py
src/tidebreak/envs/: __init__.py
tests/: __init__.py  test_bindings.py  test_setup.py  test_wrappers.py
