[workspace]
resolver = "2"
members = [
    "crates/murk",
    "crates/tidebreak-core",
    "crates/tidebreak-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/john/tidebreak"

[workspace.dependencies]
# Internal crates
murk = { path = "crates/murk" }
tidebreak-core = { path = "crates/tidebreak-core" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation (deterministic)
rand = "0.8"
rand_chacha = "0.3"

# Math
glam = { version = "0.29", features = ["serde"] }

# Bitflags for status flags
bitflags = { version = "2.4", features = ["serde"] }

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
proptest = "1.0"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1  # Some optimization for faster iteration during development
