[package]
name = "tidebreak-core"
description = "Combat Arena core simulation for Tidebreak"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
murk = { workspace = true }
serde = { workspace = true }
glam = { workspace = true }
bitflags = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }
