[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tidebreak"
description = "Naval strategy game with DRL agents"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "tidebreak._tidebreak"
python-source = "python"

[project.optional-dependencies]
envs = ["gymnasium>=1.0"]
